refatoring: pages dashboard
